--- a/part1.Rmd
+++ b/part1.Rmd
@@ -3,25 +3,22 @@ title: "Statistical Inference Course Project Part 1"
 author: "Katya Demidova"
 date: "24 December 2015"
 output:
+  pdf_document: 
+    fig_height: 3
+    fig_width: 5
   html_document:
+    fig.align: center
     fig_height: 6
     fig_width: 8
-    fig.align: center
     style: style.css
     warning: no
-  pdf_document: default
 ---
 
 ## Overview
 
-The main goal of this document is to investigate the exponential distribution in R and compare it with the Central Limit Theorem. We'll illustrate via simulation and associated explanatory text the properties of the distribution of the mean of 40 exponentials and show that it behaves as predicted by the CLT.
+The main goal of this document is to investigate the exponential distribution in R and compare it with the Central Limit Theorem. We will illustrate via simulation and associated explanatory text the properties of the distribution of the mean of 40 exponentials and show that it behaves as predicted by the CLT. The code used in this work can be seen in Appendix.
 
 ## Simulation
-
-Set the workspace
-```{r}
-library(ggplot2)
-```
 
 The exponential distribution can be simulated in R with `rexp(n, lambda)` where `lambda` is the rate parameter. 
 
@@ -31,7 +28,9 @@ The requirements are:
 - Investigate the distribution of averages of 40 exponentials.
 - Do a thousand simulations.
 
-```{r}
+```{r start, echo=FALSE}
+library(ggplot2)
+
 set.seed(123)
 
 nosim <- 1000
@@ -44,10 +43,12 @@ means <- sapply(sims, mean)
 means <- data.frame(means)
 
 dist <- ggplot(data = means, aes(x = means)) + theme(legend.position = "none") +
-  geom_histogram(binwidth=0.1, aes(fill = ..count..))
+  geom_histogram(binwidth=0.1)
   
-dist + ggtitle("Distribution of simulated averages of 40 exponentials") 
+dist
 ```
+
+**Figure: Distribution of simulated averages of 40 exponentials**
 
 ## Sample Mean versus Theoretical Mean
 
@@ -64,30 +65,32 @@ Next, we will evaluate the sample mean:
 
 Let's add the sample mean and the theoretical mean to the plot we've constructed before:
 
-```{r}
-dist + ggtitle("Sample mean (yellow line) vs. Theoretical mean (red)") +
-  geom_vline(aes(xintercept = sample.mean), colour="yellow", size = 1) +
-  geom_vline(aes(xintercept = theor.mean), colour="red", alpha=1, size = 1)
+```{r means, echo = FALSE}
+dist + 
+  geom_vline(aes(xintercept = sample.mean), colour="red", size = 1) +
+  geom_vline(aes(xintercept = theor.mean), colour="blue", size = 1)
 ```
 
-The center of mean distributions (`r sample.mean`) is very close to the theoretical mean (`r theor.mean`). 
+**Figure: Sample mean (red line) vs. Theoretical mean (blue)**
+
+As predicted by CLT, the center of mean distributions (`r sample.mean`) is very close to the theoretical mean (`r theor.mean`). 
 
 ## Sample Variance versus Theoretical Variance
 
 The standard deviation of exponential distribution is `1 / lambda`. Given the Central Limit Theorem, our expected variance equals to `sd ^ 2 / n`, where `n` is the sample size (which is 40).
 
-Theoretical variance of the sample means:
+Theoretical variance and standard deviation of the sample means:
 
-```{r}
+```{r, results='hold'}
 (theor.variance <- ((1 / lambda) / sqrt(n)) ^ 2 )
-theor.sd <- sqrt(theor.variance)
+(theor.sd <- sqrt(theor.variance))
 ```
 
-Sample variance of averages of simulations:
+Sample variance and standard deviation of averages of simulations:
 
-```{r}
-sample.sd <- sd(means$means)
+```{r, results='hold'}
 (sample.variance <- var(means$means))
+(sample.sd <- sd(means$means))
 ```
 
 Sample standard deviation (`r sample.sd`) is close to the theoretical standard deviation (`r theor.sd`). Sample and expected variances (`r sample.variance` and `r theor.variance`) also look similar (since variances are measured in square units, standard deviations are preferred).
@@ -96,20 +99,70 @@ Sample standard deviation (`r sample.sd`) is close to the theoretical standard d
 
 Given the Central Limit Theorem, the distribution of the means should be approximately normal. Let's look at this figure:
 
-```{r}
-dist + geom_vline(aes(xintercept = sample.mean)) +
-  stat_function(fun = dnorm, args = list(mean = theor.mean, sd = theor.sd)) +
-  ggtitle("Density of sample means vs. Normal distribution")
+```{r distr, echo = FALSE, message=F}
+ggplot(data = means, aes(x = means)) + 
+  geom_histogram(aes(y=..density..)) +
+  geom_vline(aes(xintercept = sample.mean, color = sample.mean), size = 2) +
+  stat_function(fun = dnorm, args = list(mean = theor.mean, sd = theor.sd), size=2, color = "green") + theme(legend.position = "none")
 ```
 
-Indeed, density of calculated means is somehow similar to a normal (bell-shaped) curve (its mean and sd were calculated earlier). We could also build a QQ plot:
-```{r}
+**Figure: distribution of sample means. Green line: sample mean. Yellow curve: normal distribution**
+
+Indeed, density of calculated means is somehow similar to a normal (bell-shaped) curve (its mean and sd were calculated earlier). We can also build a QQ plot:
+
+```{r qqplot, echo = FALSE}
 ggplot(data = means, aes(sample = means)) + 
   stat_qq(size=4, alpha=0.25) + 
-  labs(title = "QQ plot for sample distribution of the means\nagainst theoretical distribution", 
+  labs(title = "", 
        x = "Expected normal values", 
        y = "Actual values")
 ```
+
+**Figure: QQ plot for sample distribution of the means against theoretical distribution**
+
 From the look of this QQ plot, we can make the conclusion that the distribution of actual data (sample means) is approximately normal.
 
 We have investigated the exponential distribution in R and compared it with the Central Limit Theorem. We have compared the sample mean to the theoretical mean, the variability of the mean of 40 exponentials to the theoretical variance, and from that we concluded that the distribution of sample means behaved as predicted by the Central Limit Theorem.
+
+## Appendix
+
+```{r, eval=FALSE, ref.label="start"}
+library(ggplot2)
+
+set.seed(123)
+
+nosim <- 1000
+n <- 40
+lambda <- 0.2
+
+sims <- data.frame(replicate(nosim, rexp(n, lambda)))
+
+means <- sapply(sims, mean)
+means <- data.frame(means)
+
+dist <- ggplot(data = means, aes(x = means)) + theme(legend.position = "none") +
+  geom_histogram(binwidth=0.1)
+  
+dist
+```
+
+```{r, ref.label="means", eval = FALSE}
+dist + 
+  geom_vline(aes(xintercept = sample.mean), colour="red", size = 1) +
+  geom_vline(aes(xintercept = theor.mean), colour="blue", size = 1)
+```
+
+```{r, ref.label="distr", eval = FALSE}
+ggplot(data = means, aes(x = means)) + 
+  geom_histogram(aes(y=..density..)) +
+  geom_vline(aes(xintercept = sample.mean, color = sample.mean), size = 2) +
+  stat_function(fun = dnorm, args = list(mean = theor.mean, sd = theor.sd), size=2, color = "green") + theme(legend.position = "none")
+```
+
+```{r, ref.label="qqplot", eval = FALSE}
+ggplot(data = means, aes(sample = means)) + 
+  stat_qq(size=4, alpha=0.25) + 
+  labs(title = "", 
+       x = "Expected normal values", 
+       y = "Actual values")
+```
