--- a/analysis.Rmd
+++ b/analysis.Rmd
@@ -217,133 +217,36 @@ events <- gsub("[[:punct:]]+", " ", events)
 events <- gsub("^\\s+|\\s+$|\\s\\s+", "", events)
 ```
 
-Next, we will replace incorrect values with the correct ones (from the NOAA paper) by performing code you can see in Appendix.
+Next, we will replace incorrect values with the correct ones (from the NOAA paper) by performing the following code (for readability, the whole code chunk was put in Appendix).
 
-```{r replacement, echo=F, eval=TRUE}
-events[events=="TSTM WIND" | events=="THUNDERSTORM" |
-      events=="THUNDERSTORM WINDG" | events=="THUNDERSTORMS"] <- "THUNDERSTORM WIND"
+```{r replacement, echo=1:15, eval=TRUE}
+events[events %in% c("COASTAL EROSION", "COASTAL FLOODING EROSION", "COASTAL FLOODING", "EROSION CSTL FLOOD", "STORM SURGE TIDE", "STORM SURGE")] <- "COASTAL FLOOD"
+events[events %in% c("COLD TEMPERATURE", "COLD WEATHER", "COLD WIND CHILL", "COLD", "HYPOTHERMIA EXPOSURE", "LIGHT FREEZING RAIN") ] <- "COLD/WIND CHILL"
+events[events %in% c("FOG")] <- "DENSE FOG"
+events[events %in% c("BLOWING DUST")] <- "DUST STORM"
+events[events %in% c("EXTENDED COLD", "UNSEASONABLE COLD", "UNSEASONABLY COLD", "EXTREME COLD WIND CHILL", "EXTREME COLD", "EXTREME WINDCHILL")] <- "EXTREME COLD/WIND CHILL"
+events[events %in% c("DAM BREAK", "DROWNING", "HIGH SEAS", "HIGH SWELLS", "HIGH WATER", "RIVER FLOOD", "RIVER FLOODING", "TIDAL FLOODING", "URBAN SML STREAM FLD")] <- "FLOOD"
+events[events %in% c("FLASH FLOOD FLOOD", "FLASH FLOOD", "FLOOD FLASH FLOOD", "FLOOD")] <- "FLOOD/FLASH FLOOD"
+events[events %in% c("AGRICULTURAL FREEZE", "DAMAGING FREEZE", "EARLY FROST", "FREEZE", "FREEZING DRIZZLE", "FREEZING RAIN", "FREEZING SPRAY", "FROST FREEZE", "FROST", "GLAZE", "HARD FREEZE")] <- "FROST/FREEZE"
+events[events %in% c("FALLING SNOW ICE", "SMALL HAIL")] <- "HAIL"
+events[events %in% c("RECORD HEAT", "HEAT WAVE", "HYPERTHERMIA EXPOSURE", "UNSEASONABLY WARM", "WARM WEATHER")] <- "HEAT"
+events[events %in% c("HEAVY RAIN HIGH SURF", "RAIN", "TORRENTIAL RAINFALL", "UNSEASONAL RAIN")] <- "HEAVY RAIN"
+events[events %in% c("EXCESSIVE SNOW", "HEAVY SNOW SHOWER", "LATE SEASON SNOW", "SNOW SQUALL", "SNOW SQUALLS")] <- "HEAVY SNOW"
+events[events %in% c("ASTRONOMICAL HIGH TIDE", "HAZARDOUS SURF", "HEAVY SEAS", "HEAVY SURF AND WIND", "HEAVY SURF HIGH SURF", "HEAVY SURF", "HIGH SURF ADVISORY", "ROGUE WAVE", "ROUGH SURF", "WIND AND WAVE")] <- "HIGH SURF"
+events[events %in% c("HIGH WINDG", "HIGH WINDS", "NON SEVERE WIND DAMAGE", "NON TSTM WIND")] <- "HIGH WIND"
+events[events %in% c("HURRICANE EDOUARD", "HURRICANE TYPHOON", "HURRICANE", "TYPHOON")] <- "HURRICANE/TYPHOON"
+events[events %in% c("ROCK SLIDE")] <- "LANDSLIDE"
+events[events %in% c("ROUGH SEAS")] <- "MARINE HIGH WIND"
+events[events %in% c("MARINE TSTM WIND")] <- "MARINE THUNDERSTORM WIND"
+events[events %in% c("MUD SLIDE")] <- "MUDSLIDE"
+events[events %in% c("BEACH EROSION", "BLACK ICE", "LANDSLUMP", "MARINE ACCIDENT", "MIXED PRECIP", "MIXED PRECIPITATION") ] <- "OTHER"
+events[events %in% c("RIP CURRENTS")] <- "RIP CURRENT"
+events[events %in% c("DOWNBURST", "DRY MICROBURST","GRADIENT WIND", "GUSTY WIND HAIL", "GUSTY WIND HVY RAIN", "GUSTY WIND RAIN", "GUSTY WIND", "GUSTY WINDS", "MICROBURST", "STRONG WINDS", "WET MICROBURST", "WIND DAMAGE", "WIND", "WINDS")] <- "STRONG WIND"
+events[events %in% c("TSTM WIND", "THUNDERSTORM", "THUNDERSTORM WINDG", "THUNDERSTORMS","TSTM WIND AND LIGHTNING", "TSTM WIND G", "TSTM WIND HAIL", "TSTM WINDG")] <- "THUNDERSTORM WIND"
+events[events %in% c("LANDSPOUT", "WHIRLWIND")] <- "TORNADO"
+events[events %in% c("BRUSH FIRE", "DENSE SMOKE", "WILD FOREST FIRE")] <- "WILDFIRE"
+events[events %in% c("BLOWING SNOW", "COLD AND SNOW", "ICE JAM FLOODMINOR", "ICE ON ROAD", "ICE ROADS", "ICY ROADS", "LAKE EFFECT SNOW", "LIGHT SNOW", "LIGHT SNOWFALL", "RAIN SNOW", "SNOW AND ICE", "SNOW", "WINTER WEATHER MIX", "WINTRY MIX")] <- "WINTER WEATHER"
 
-events[events=="MARINE TSTM WIND"] <- "MARINE THUNDERSTORM WIND"
-
-events[events=="COASTAL EROSION" | events=="COASTAL FLOODING EROSION" | events=="COASTAL FLOODING" | events=="COASTAL STORM" | events=="COASTALFLOODING EROSION" | events=="COASTALSTORM"] <- "COASTAL FLOOD"
-events[events=="COLD TEMPERATURE" | events=="COLD WEATHER" | events=="COLD WIND CHILL" | events=="COLD"] <- "COLD/WIND CHILL"
-events[events=="DAMAGING FREEZE"] <- "FROST/FREEZE"
-events[events=="DOWNBURST" | events=="DRY MICROBURST"] <- "STRONG WIND"
-events[events=="EROSION CSTL FLOOD"] <- "COASTAL FLOOD"
-events[events=="EXTREME COLD WIND CHILL" | events=="EXTREME COLD" | events=="EXTREME WINDCHILL"] <- "EXTREME COLD/WIND CHILL"
-events[events=="FLASH FLOOD FLOOD" | events=="FLASH FLOOD" | events=="FLOOD FLASH FLOOD" | events=="FLOOD"] <- "FLOOD/FLASH FLOOD"
-events[events=="FROST FREEZE"] <- "FROST/FREEZE"
-events[events=="FROST"] <- "FROST/FREEZE"
-events[events=="HEAVY RAIN HIGH SURF"] <- "HEAVY RAIN"
-events[events=="HEAVY SNOW SHOWER"] <- "HEAVY SNOW"
-events[events=="HEAVY SURF AND WIND"] <- "HIGH SURF"
-events[events=="HEAVY SURF HIGH SURF"] <- "HIGH SURF"
-events[events=="HEAVY SURF"] <- "HIGH SURF"
-events[events=="HIGH SURF ADVISORY"] <- "HIGH SURF"
-events[events=="HIGH WINDG"] <- "HIGH WIND"
-events[events=="HIGH WINDS"] <- "HIGH WIND"
-events[events=="HURRICANE EDOUARD"] <- "HURRICANE/TYPHOON"
-events[events=="HURRICANE TYPHOON"] <- "HURRICANE/TYPHOON"
-events[events=="HURRICANE"] <- "HURRICANE/TYPHOON"
-events[events=="ICE STORM"] <- "ICE STORM"
-events[events=="RIP CURRENTS"] <- "RIP CURRENT"
-events[events=="SMALL HAIL"] <- "HAIL"
-events[events=="STRONG WINDS"] <- "STRONG WIND"
-events[events=="TSTM WIND AND LIGHTNING"] <- "THUNDERSTORM WIND"
-events[events=="TSTM WIND G"] <- "THUNDERSTORM WIND"
-events[events=="TSTM WIND HAIL"] <- "THUNDERSTORM WIND"
-events[events=="TSTM WINDG"] <- "THUNDERSTORM WIND"
-events[events=="TYPHOON"] <- "HURRICANE/TYPHOON"
-events[events=="VOLCANIC ASH"] <- "VOLCANIC ASH"
-events[events=="WILD FOREST FIRE"] <- "WILDFIRE"
-events[events=="WINTER WEATHER MIX"] <- "WINTER WEATHER"
-events[events=="WINTRY MIX"] <- "WINTER WEATHER"
-events[events=="AGRICULTURAL FREEZE"] <- "FROST/FREEZE"
-events[events=="ASTRONOMICAL HIGH TIDE"] <- "HIGH SURF"
-events[events=="BEACH EROSION"] <- "OTHER"
-events[events=="BLACK ICE"] <- "OTHER"
-events[events=="BLOWING DUST"] <- "DUST STORM"
-events[events=="BLOWING SNOW"] <- "WINTER WEATHER"
-events[events=="BRUSH FIRE"] <- "WILDFIRE"
-events[events=="COLD AND SNOW"] <- "WINTER WEATHER"
-events[events=="DAM BREAK"] <- "FLOOD"
-events[events=="DENSE SMOKE"] <- "WILDFIRE"
-events[events=="DROWNING"] <- "FLOOD"
-events[events=="EARLY FROST"] <- "FROST/FREEZE"
-events[events=="EXCESSIVE SNOW"] <- "HEAVY SNOW"
-events[events=="EXTENDED COLD"] <- "EXTREME COLD/WIND CHILL"
-events[events=="FALLING SNOW ICE"] <- "HAIL"
-events[events=="FOG"] <- "DENSE FOG"
-events[events=="FREEZE"] <- "FROST/FREEZE"
-events[events=="FREEZING DRIZZLE"] <- "FROST/FREEZE"
-events[events=="FREEZING RAIN"] <- "FROST/FREEZE"
-events[events=="FREEZING SPRAY"] <- "FROST/FREEZE"
-events[events=="GLAZE"] <- "FROST/FREEZE"
-events[events=="GRADIENT WIND"] <- "STRONG WIND"
-events[events=="GUSTY WIND"] <- "STRONG WIND"
-events[events=="GUSTY WIND HAIL"] <- "STRONG WIND"
-events[events=="GUSTY WIND HVY RAIN"] <- "STRONG WIND"
-events[events=="GUSTY WIND RAIN"] <- "STRONG WIND"
-events[events=="GUSTY WINDS"] <- "STRONG WIND"
-events[events=="HARD FREEZE"] <- "FROST/FREEZE"
-events[events=="HAZARDOUS SURF"] <- "HIGH SURF"
-events[events=="HEAT WAVE"] <- "HEAT"
-events[events=="HEAVY SEAS"] <- "HIGH SURF"
-events[events=="HIGH SEAS"] <- "FLOOD"
-events[events=="HIGH SWELLS"] <- "FLOOD"
-events[events=="HIGH WATER"] <- "FLOOD"
-events[events=="HYPERTHERMIA EXPOSURE"] <- "HEAT"
-events[events=="HYPOTHERMIA EXPOSURE"] <- "COLD/WIND CHILL"
-events[events=="ICE JAM FLOODMINOR"] <- "WINTER WEATHER"
-events[events=="ICE ON ROAD"] <- "WINTER WEATHER"
-events[events=="ICE ROADS"] <- "WINTER WEATHER"
-events[events=="ICY ROADS"] <- "WINTER WEATHER"
-events[events=="LAKE EFFECT SNOW"] <- "WINTER WEATHER"
-events[events=="LAKESHORE FLOOD"] <- "LAKESHORE FLOOD"
-events[events=="LANDSLIDES"] <- "LANDSLIDE"
-events[events=="LANDSLUMP"] <- "OTHER"
-events[events=="LANDSPOUT"] <- "TORNADO"
-events[events=="LATE SEASON SNOW"] <- "HEAVY SNOW"
-events[events=="LIGHT FREEZING RAIN"] <- "COLD/WIND CHILL"
-events[events=="LIGHT SNOW"] <- "WINTER WEATHER"
-events[events=="LIGHT SNOWFALL"] <- "WINTER WEATHER"
-events[events=="MARINE ACCIDENT"] <- "OTHER"
-events[events=="MICROBURST"] <- "STRONG WIND"
-events[events=="MIXED PRECIP"] <- "OTHER"
-events[events=="MIXED PRECIPITATION"] <- "OTHER"
-events[events=="MUD SLIDE"] <- "MUDSLIDE"
-events[events=="MUDSLIDES"] <- "MUDSLIDE"
-events[events=="NON SEVERE WIND DAMAGE"] <- "HIGH WIND"
-events[events=="NON TSTM WIND"] <- "HIGH WIND"
-events[events=="RAIN"] <- "HEAVY RAIN"
-events[events=="RAIN SNOW"] <- "WINTER WEATHER"
-events[events=="RECORD HEAT"] <- "EXCESSIVE HEAT"
-events[events=="RIVER FLOOD"] <- "FLOOD"
-events[events=="RIVER FLOODING"] <- "FLOOD"
-events[events=="ROCK SLIDE"] <- "LANDSLIDE"
-events[events=="ROGUE WAVE"] <- "HIGH SURF"
-events[events=="ROUGH SEAS"] <- "MARINE HIGH WIND"
-events[events=="ROUGH SURF"] <- "HIGH SURF"
-events[events=="SNOW"] <- "WINTER WEATHER"
-events[events=="SNOW AND ICE"] <- "WINTER WEATHER"
-events[events=="SNOW SQUALL"] <- "HEAVY SNOW"
-events[events=="SNOW SQUALLS"] <- "HEAVY SNOW"
-events[events=="STORM SURGE TIDE"] <- "COASTAL FLOOD"
-events[events=="STORM SURGE"] <- "COASTAL FLOOD"
-events[events=="TIDAL FLOODING"] <- "FLOOD"
-events[events=="TORRENTIAL RAINFALL"] <- "HEAVY RAIN"
-events[events=="UNSEASONABLE COLD"] <- "EXTREME COLD/WIND CHILL"
-events[events=="UNSEASONABLY COLD"] <- "EXTREME COLD/WIND CHILL"
-events[events=="UNSEASONABLY WARM"] <- "HEAT"
-events[events=="UNSEASONAL RAIN"] <- "HEAVY RAIN"
-events[events=="URBAN SML STREAM FLD"] <- "FLOOD"
-events[events=="WARM WEATHER"] <- "HEAT"
-events[events=="WET MICROBURST"] <- "STRONG WIND"
-events[events=="WHIRLWIND"] <- "TORNADO"
-events[events=="WIND"] <- "STRONG WIND"
-events[events=="WIND AND WAVE"] <- "HIGH SURF"
-events[events=="WIND DAMAGE"] <- "STRONG WIND"
-events[events=="WINDS"] <- "STRONG WIND"
 
 ```
 
@@ -442,7 +345,7 @@ After reading in the original CSV file, we save the dataset as an RDS file so we
 
 The following chunk of code checks if there is an RDS file (if there isn't, it creates it (from the CSV file which is created by unpacking the BZ2 package)) and loads the data into workspace.
 
-```{r, eval=FALSE}
+```{r, eval=FALSE, warning=F, message=F}
 # Download and import the data
 
 if (!file.exists("StormData.rds")) {
@@ -469,129 +372,32 @@ if (!exists("raw.storm")) {
 ### Evtype replacement
 
 ```{r, ref.label="replacement", eval=FALSE, echo=TRUE}
-events[events=="TSTM WIND" | events=="THUNDERSTORM" |
-      events=="THUNDERSTORM WINDG" | events=="THUNDERSTORMS"] <- "THUNDERSTORM WIND"
+events[events %in% c("COASTAL EROSION", "COASTAL FLOODING EROSION", "COASTAL FLOODING", "EROSION CSTL FLOOD", "STORM SURGE TIDE", "STORM SURGE")] <- "COASTAL FLOOD"
+events[events %in% c("COLD TEMPERATURE", "COLD WEATHER", "COLD WIND CHILL", "COLD", "HYPOTHERMIA EXPOSURE", "LIGHT FREEZING RAIN") ] <- "COLD/WIND CHILL"
+events[events %in% c("FOG")] <- "DENSE FOG"
+events[events %in% c("BLOWING DUST")] <- "DUST STORM"
+events[events %in% c("EXTENDED COLD", "UNSEASONABLE COLD", "UNSEASONABLY COLD", "EXTREME COLD WIND CHILL", "EXTREME COLD", "EXTREME WINDCHILL")] <- "EXTREME COLD/WIND CHILL"
+events[events %in% c("DAM BREAK", "DROWNING", "HIGH SEAS", "HIGH SWELLS", "HIGH WATER", "RIVER FLOOD", "RIVER FLOODING", "TIDAL FLOODING", "URBAN SML STREAM FLD")] <- "FLOOD"
+events[events %in% c("FLASH FLOOD FLOOD", "FLASH FLOOD", "FLOOD FLASH FLOOD", "FLOOD")] <- "FLOOD/FLASH FLOOD"
+events[events %in% c("AGRICULTURAL FREEZE", "DAMAGING FREEZE", "EARLY FROST", "FREEZE", "FREEZING DRIZZLE", "FREEZING RAIN", "FREEZING SPRAY", "FROST FREEZE", "FROST", "GLAZE", "HARD FREEZE")] <- "FROST/FREEZE"
+events[events %in% c("FALLING SNOW ICE", "SMALL HAIL")] <- "HAIL"
+events[events %in% c("RECORD HEAT", "HEAT WAVE", "HYPERTHERMIA EXPOSURE", "UNSEASONABLY WARM", "WARM WEATHER")] <- "HEAT"
+events[events %in% c("HEAVY RAIN HIGH SURF", "RAIN", "TORRENTIAL RAINFALL", "UNSEASONAL RAIN")] <- "HEAVY RAIN"
+events[events %in% c("EXCESSIVE SNOW", "HEAVY SNOW SHOWER", "LATE SEASON SNOW", "SNOW SQUALL", "SNOW SQUALLS")] <- "HEAVY SNOW"
+events[events %in% c("ASTRONOMICAL HIGH TIDE", "HAZARDOUS SURF", "HEAVY SEAS", "HEAVY SURF AND WIND", "HEAVY SURF HIGH SURF", "HEAVY SURF", "HIGH SURF ADVISORY", "ROGUE WAVE", "ROUGH SURF", "WIND AND WAVE")] <- "HIGH SURF"
+events[events %in% c("HIGH WINDG", "HIGH WINDS", "NON SEVERE WIND DAMAGE", "NON TSTM WIND")] <- "HIGH WIND"
+events[events %in% c("HURRICANE EDOUARD", "HURRICANE TYPHOON", "HURRICANE", "TYPHOON")] <- "HURRICANE/TYPHOON"
+events[events %in% c("ROCK SLIDE")] <- "LANDSLIDE"
+events[events %in% c("ROUGH SEAS")] <- "MARINE HIGH WIND"
+events[events %in% c("MARINE TSTM WIND")] <- "MARINE THUNDERSTORM WIND"
+events[events %in% c("MUD SLIDE")] <- "MUDSLIDE"
+events[events %in% c("BEACH EROSION", "BLACK ICE", "LANDSLUMP", "MARINE ACCIDENT", "MIXED PRECIP", "MIXED PRECIPITATION") ] <- "OTHER"
+events[events %in% c("RIP CURRENTS")] <- "RIP CURRENT"
+events[events %in% c("DOWNBURST", "DRY MICROBURST","GRADIENT WIND", "GUSTY WIND HAIL", "GUSTY WIND HVY RAIN", "GUSTY WIND RAIN", "GUSTY WIND", "GUSTY WINDS", "MICROBURST", "STRONG WINDS", "WET MICROBURST", "WIND DAMAGE", "WIND", "WINDS")] <- "STRONG WIND"
+events[events %in% c("TSTM WIND", "THUNDERSTORM", "THUNDERSTORM WINDG", "THUNDERSTORMS","TSTM WIND AND LIGHTNING", "TSTM WIND G", "TSTM WIND HAIL", "TSTM WINDG")] <- "THUNDERSTORM WIND"
+events[events %in% c("LANDSPOUT", "WHIRLWIND")] <- "TORNADO"
+events[events %in% c("BRUSH FIRE", "DENSE SMOKE", "WILD FOREST FIRE")] <- "WILDFIRE"
+events[events %in% c("BLOWING SNOW", "COLD AND SNOW", "ICE JAM FLOODMINOR", "ICE ON ROAD", "ICE ROADS", "ICY ROADS", "LAKE EFFECT SNOW", "LIGHT SNOW", "LIGHT SNOWFALL", "RAIN SNOW", "SNOW AND ICE", "SNOW", "WINTER WEATHER MIX", "WINTRY MIX")] <- "WINTER WEATHER"
 
-events[events=="MARINE TSTM WIND"] <- "MARINE THUNDERSTORM WIND"
-
-events[events=="COASTAL EROSION" | events=="COASTAL FLOODING EROSION" | events=="COASTAL FLOODING" | events=="COASTAL STORM" | events=="COASTALFLOODING EROSION" | events=="COASTALSTORM"] <- "COASTAL FLOOD"
-events[events=="COLD TEMPERATURE" | events=="COLD WEATHER" | events=="COLD WIND CHILL" | events=="COLD"] <- "COLD/WIND CHILL"
-events[events=="DAMAGING FREEZE"] <- "FROST/FREEZE"
-events[events=="DOWNBURST" | events=="DRY MICROBURST"] <- "STRONG WIND"
-events[events=="EROSION CSTL FLOOD"] <- "COASTAL FLOOD"
-events[events=="EXTREME COLD WIND CHILL" | events=="EXTREME COLD" | events=="EXTREME WINDCHILL"] <- "EXTREME COLD/WIND CHILL"
-events[events=="FLASH FLOOD FLOOD" | events=="FLASH FLOOD" | events=="FLOOD FLASH FLOOD" | events=="FLOOD"] <- "FLOOD/FLASH FLOOD"
-events[events=="FROST FREEZE"] <- "FROST/FREEZE"
-events[events=="FROST"] <- "FROST/FREEZE"
-events[events=="HEAVY RAIN HIGH SURF"] <- "HEAVY RAIN"
-events[events=="HEAVY SNOW SHOWER"] <- "HEAVY SNOW"
-events[events=="HEAVY SURF AND WIND"] <- "HIGH SURF"
-events[events=="HEAVY SURF HIGH SURF"] <- "HIGH SURF"
-events[events=="HEAVY SURF"] <- "HIGH SURF"
-events[events=="HIGH SURF ADVISORY"] <- "HIGH SURF"
-events[events=="HIGH WINDG"] <- "HIGH WIND"
-events[events=="HIGH WINDS"] <- "HIGH WIND"
-events[events=="HURRICANE EDOUARD"] <- "HURRICANE/TYPHOON"
-events[events=="HURRICANE TYPHOON"] <- "HURRICANE/TYPHOON"
-events[events=="HURRICANE"] <- "HURRICANE/TYPHOON"
-events[events=="ICE STORM"] <- "ICE STORM"
-events[events=="RIP CURRENTS"] <- "RIP CURRENT"
-events[events=="SMALL HAIL"] <- "HAIL"
-events[events=="STRONG WINDS"] <- "STRONG WIND"
-events[events=="TSTM WIND AND LIGHTNING"] <- "THUNDERSTORM WIND"
-events[events=="TSTM WIND G"] <- "THUNDERSTORM WIND"
-events[events=="TSTM WIND HAIL"] <- "THUNDERSTORM WIND"
-events[events=="TSTM WINDG"] <- "THUNDERSTORM WIND"
-events[events=="TYPHOON"] <- "HURRICANE/TYPHOON"
-events[events=="VOLCANIC ASH"] <- "VOLCANIC ASH"
-events[events=="WILD FOREST FIRE"] <- "WILDFIRE"
-events[events=="WINTER WEATHER MIX"] <- "WINTER WEATHER"
-events[events=="WINTRY MIX"] <- "WINTER WEATHER"
-events[events=="AGRICULTURAL FREEZE"] <- "FROST/FREEZE"
-events[events=="ASTRONOMICAL HIGH TIDE"] <- "HIGH SURF"
-events[events=="BEACH EROSION"] <- "OTHER"
-events[events=="BLACK ICE"] <- "OTHER"
-events[events=="BLOWING DUST"] <- "DUST STORM"
-events[events=="BLOWING SNOW"] <- "WINTER WEATHER"
-events[events=="BRUSH FIRE"] <- "WILDFIRE"
-events[events=="COLD AND SNOW"] <- "WINTER WEATHER"
-events[events=="DAM BREAK"] <- "FLOOD"
-events[events=="DENSE SMOKE"] <- "WILDFIRE"
-events[events=="DROWNING"] <- "FLOOD"
-events[events=="EARLY FROST"] <- "FROST/FREEZE"
-events[events=="EXCESSIVE SNOW"] <- "HEAVY SNOW"
-events[events=="EXTENDED COLD"] <- "EXTREME COLD/WIND CHILL"
-events[events=="FALLING SNOW ICE"] <- "HAIL"
-events[events=="FOG"] <- "DENSE FOG"
-events[events=="FREEZE"] <- "FROST/FREEZE"
-events[events=="FREEZING DRIZZLE"] <- "FROST/FREEZE"
-events[events=="FREEZING RAIN"] <- "FROST/FREEZE"
-events[events=="FREEZING SPRAY"] <- "FROST/FREEZE"
-events[events=="GLAZE"] <- "FROST/FREEZE"
-events[events=="GRADIENT WIND"] <- "STRONG WIND"
-events[events=="GUSTY WIND"] <- "STRONG WIND"
-events[events=="GUSTY WIND HAIL"] <- "STRONG WIND"
-events[events=="GUSTY WIND HVY RAIN"] <- "STRONG WIND"
-events[events=="GUSTY WIND RAIN"] <- "STRONG WIND"
-events[events=="GUSTY WINDS"] <- "STRONG WIND"
-events[events=="HARD FREEZE"] <- "FROST/FREEZE"
-events[events=="HAZARDOUS SURF"] <- "HIGH SURF"
-events[events=="HEAT WAVE"] <- "HEAT"
-events[events=="HEAVY SEAS"] <- "HIGH SURF"
-events[events=="HIGH SEAS"] <- "FLOOD"
-events[events=="HIGH SWELLS"] <- "FLOOD"
-events[events=="HIGH WATER"] <- "FLOOD"
-events[events=="HYPERTHERMIA EXPOSURE"] <- "HEAT"
-events[events=="HYPOTHERMIA EXPOSURE"] <- "COLD/WIND CHILL"
-events[events=="ICE JAM FLOODMINOR"] <- "WINTER WEATHER"
-events[events=="ICE ON ROAD"] <- "WINTER WEATHER"
-events[events=="ICE ROADS"] <- "WINTER WEATHER"
-events[events=="ICY ROADS"] <- "WINTER WEATHER"
-events[events=="LAKE EFFECT SNOW"] <- "WINTER WEATHER"
-events[events=="LAKESHORE FLOOD"] <- "LAKESHORE FLOOD"
-events[events=="LANDSLIDES"] <- "LANDSLIDE"
-events[events=="LANDSLUMP"] <- "OTHER"
-events[events=="LANDSPOUT"] <- "TORNADO"
-events[events=="LATE SEASON SNOW"] <- "HEAVY SNOW"
-events[events=="LIGHT FREEZING RAIN"] <- "COLD/WIND CHILL"
-events[events=="LIGHT SNOW"] <- "WINTER WEATHER"
-events[events=="LIGHT SNOWFALL"] <- "WINTER WEATHER"
-events[events=="MARINE ACCIDENT"] <- "OTHER"
-events[events=="MICROBURST"] <- "STRONG WIND"
-events[events=="MIXED PRECIP"] <- "OTHER"
-events[events=="MIXED PRECIPITATION"] <- "OTHER"
-events[events=="MUD SLIDE"] <- "MUDSLIDE"
-events[events=="MUDSLIDES"] <- "MUDSLIDE"
-events[events=="NON SEVERE WIND DAMAGE"] <- "HIGH WIND"
-events[events=="NON TSTM WIND"] <- "HIGH WIND"
-events[events=="RAIN"] <- "HEAVY RAIN"
-events[events=="RAIN SNOW"] <- "WINTER WEATHER"
-events[events=="RECORD HEAT"] <- "EXCESSIVE HEAT"
-events[events=="RIVER FLOOD"] <- "FLOOD"
-events[events=="RIVER FLOODING"] <- "FLOOD"
-events[events=="ROCK SLIDE"] <- "LANDSLIDE"
-events[events=="ROGUE WAVE"] <- "HIGH SURF"
-events[events=="ROUGH SEAS"] <- "MARINE HIGH WIND"
-events[events=="ROUGH SURF"] <- "HIGH SURF"
-events[events=="SNOW"] <- "WINTER WEATHER"
-events[events=="SNOW AND ICE"] <- "WINTER WEATHER"
-events[events=="SNOW SQUALL"] <- "HEAVY SNOW"
-events[events=="SNOW SQUALLS"] <- "HEAVY SNOW"
-events[events=="STORM SURGE TIDE"] <- "COASTAL FLOOD"
-events[events=="STORM SURGE"] <- "COASTAL FLOOD"
-events[events=="TIDAL FLOODING"] <- "FLOOD"
-events[events=="TORRENTIAL RAINFALL"] <- "HEAVY RAIN"
-events[events=="UNSEASONABLE COLD"] <- "EXTREME COLD/WIND CHILL"
-events[events=="UNSEASONABLY COLD"] <- "EXTREME COLD/WIND CHILL"
-events[events=="UNSEASONABLY WARM"] <- "HEAT"
-events[events=="UNSEASONAL RAIN"] <- "HEAVY RAIN"
-events[events=="URBAN SML STREAM FLD"] <- "FLOOD"
-events[events=="WARM WEATHER"] <- "HEAT"
-events[events=="WET MICROBURST"] <- "STRONG WIND"
-events[events=="WHIRLWIND"] <- "TORNADO"
-events[events=="WIND"] <- "STRONG WIND"
-events[events=="WIND AND WAVE"] <- "HIGH SURF"
-events[events=="WIND DAMAGE"] <- "STRONG WIND"
-events[events=="WINDS"] <- "STRONG WIND"
 
 ```
